--- a/weatherApp/static/main.css
+++ b/weatherApp/static/main.css
@@ -1,5 +1,5 @@
 body {
-  background: url('https://cdn.pixabay.com/photo/2014/01/10/17/48/leaves-241701_960_720.jpg') center center fixed 100% 100% no-repeat;
+  background: url('https://cdn.pixabay.com/photo/2014/01/10/17/48/leaves-241701_960_720.jpg') no-repeat center center fixed ;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
