--- a/weatherApp/static/main.css
+++ b/weatherApp/static/main.css
@@ -1,8 +1,11 @@
 body {
   background: url('https://cdn.pixabay.com/photo/2014/01/10/17/48/leaves-241701_960_720.jpg') no-repeat center center fixed ;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-
+  -webkit-background-size: 100%; 
+-moz-background-size: 100%; 
+-o-background-size: 100%; 
+background-size: 100%; 
+-webkit-background-size: cover; 
+-moz-background-size: cover; 
+-o-background-size: cover; 
+background-size: cover;
 }
