--- a/weatherApp/static/main.css
+++ b/weatherApp/static/main.css
@@ -1,11 +1,11 @@
 body {
   background: url('https://cdn.pixabay.com/photo/2014/01/10/17/48/leaves-241701_960_720.jpg') no-repeat center center fixed ;
-  -webkit-background-size: 100%; 
--moz-background-size: 100%; 
--o-background-size: 100%; 
-background-size: 100%; 
--webkit-background-size: cover; 
--moz-background-size: cover; 
--o-background-size: cover; 
-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 0px 0px;
+    background-attachment: fixed;
+    background-color: #fff;
+    -webkit-background-size: calc(100vw) calc(100vh);
+    -moz-background-size: calc(100vw) calc(100vh);
+    -o-background-size: calc(100vw) calc(100vh);
+    background-size: calc(100vw) calc(100vh);
 }
