--- a/weatherApp/templates/base.html
+++ b/weatherApp/templates/base.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'main.css' %}">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	<title>Weather App</title>
+	<title>Django Weather App</title>
 </head>
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
